Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-2102

constants are not referencing to correct type when included from another thrift file

VotersWatch issueWatchersLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 0.9.1
    • Go - Compiler
    • None
    • Patch Available

    Description

      constants which contain a typedef or a type defined in another thrift file are not working correctly

      test case included

      Attachments

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            Unassigned Unassigned
            nairboon Remo Hertig
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment