THRIFT-2102 constants are not referencing to correct type when included from another thrift file

Patch: Remo Hertig